--- a/Css/style.css
+++ b/Css/style.css
@@ -155,6 +155,9 @@
 
 /* Main View ends here.. */
 
+
+/* Advantages starts */
+
 .Advantages--IMG {
     width: 73px;
     height: 66px;
@@ -173,8 +176,92 @@
 .Advantages--Description {
     padding: 0px;
     margin: 0px;
+    margin-top: 5px;
+    font-weight: 500;
     font-size: 14px;
     color: white;
     margin-bottom: 50px;
+}
+
+
+/* Advantages ends */
+
+
+/* Categories starts */
+
+#Categories-Title {
+    padding: 0px;
+    margin: 0px;
+    font-size: 32px;
+    font-weight: bold;
     font-family: 'Montserrat', sans-serif;
 }
+
+#Categories-Description {
+    padding: 0px;
+    margin: 0px;
+    color: #828282;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.Categories--Card1 {
+    height: 170px;
+    background-image: url(/Images/Malta\ Slices.png);
+}
+
+.Categories--Card2 {
+    height: 170px;
+    background-image: url(/Images/Mixed\ Food.png);
+}
+
+.Categories--Card3 {
+    height: 170px;
+    background-image: url(/Images/Orange\ Juice.png);
+}
+
+.Categories--Card4 {
+    height: 170px;
+    background-image: url(/Images/Special\ Apple.png);
+}
+
+.Categories--Card5 {
+    height: 170px;
+    background-image: url(/Images/Vegetables.png);
+}
+
+.Categories--Card6 {
+    height: 170px;
+    background-image: url(/Images/Strawberries.png);
+}
+
+.Categories--CardTitle {
+    padding-top: 35px;
+    padding-left: 20px;
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.Categories--CardQuantity {
+    font-size: 14px;
+    padding-left: 20px;
+}
+
+.Categories--CardButton {
+    font-size: 14px;
+    outline: none;
+    color: #338814;
+    font-weight: bold;
+    border: none;
+    background: transparent;
+    margin-left: 15px;
+    border-bottom: 2px solid #338814;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+/* Categories ends */
