--- a/Css/style.css
+++ b/Css/style.css
@@ -215,7 +215,7 @@
 
 .Categories--Card1 {
     height: 170px;
-    background-image: url(/Images/Malta\ Slices.png);
+    background-image: url(/Images/Malta_Slices.png);
 }
 
 .Categories--Card2 {
