--- a/Css/style.css
+++ b/Css/style.css
@@ -220,7 +220,7 @@
 
 .Categories--Card2 {
     height: 170px;
-    background-image: url(/Images/Mixed\ Food.png);
+    background-image: url(../Images/Mixed\ Food.png);
 }
 
 .Categories--Card3 {
